fix wrap width

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,6 +12,7 @@ body {
 
 /* Wrapper for page content to push down footer */
 #wrap {
+  width: 100%;
   min-height: 100%;
   height: auto !important;
   height: 100%;
